@@ -126,6 +126,21 @@ ps -ef |grep tomcat
 
 kill -9 5144
 
+#### Android Sdk Manager 打不开 JDK Version 大于 8 
+
+找到 $Sdk/bin/sdkmanager shell脚本，用文本编辑器打开
+
+搜索 DEFAULT_JVM_OPTS 关键字，找到类似脚本：
+
+DEFAULT_JVM_OPTS ='“ -  Dcom.android.sdklib.toolsdir = $ APP_HOME” '
+
+追加以下脚本（注意空格）：
+ -XX： + IgnoreUnrecognizedVMOptions --add-modules java.se.ee
+
+最终脚本：
+
+DEFAULT_JVM_OPTS ='“ -Dcom.android.sdklib.toolsdir = $ APP_HOME“ -XX：+ IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+
 
 
 
